<resources>
    <string name="app_name">Mom\'s Magic</string>
    <string name="title_activity_home">Mom\'s Magic</string>
    <string name="title_activity_grocery_list">Grocery List</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_advanced_search">Advanced Search</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="search_here">Search Here</string>
    <string name="views">Views</string>
    <string name="credits">Credits</string>
    <string name="gotit">GOT IT</string>
    <string name="skip">SKIP>></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--grocery-->

    <string name="checkout">Checkout</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="report">Report a Problem</string>
    <string name="enter_new_item_here">Enter new item here...</string>

    <!--Report-->
    <string name="hint_email">Email</string>
    <string name="hint_description">Enter Desciption.</string>
    <string name="hint_title">Enter Title.</string>
    <string name="submit">Submit</string>
    <string name="err_msg_title">Enter valid title</string>
    <string name="err_msg_desc">Enter valid description</string>
    <string name="err_msg_email">Enter valid email address</string>

    <!--version-->
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="version">Version 1.1.3</string>
</resources>
