<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReportProblem">

    <TextView
        android:id="@+id/heading_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/report"
        android:textColor="#555555"
        android:textSize="24sp" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_below="@id/heading_label"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_title"
        android:layout_below="@id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_title"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_desc"
        android:layout_below="@id/input_layout_title"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_desc"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textImeMultiLine"
            android:lines="8"
            android:hint="@string/hint_description" />
    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/input_submit"
        android:layout_width="fill_parent"
        android:layout_below="@id/input_layout_desc"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"/>

</RelativeLayout>